<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <ScrollView
            android:id="@+id/activity_uvodna_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:paddingBottom="@dimen/layout_margin">

                <EditText
                    android:id="@+id/fragment_dodaj_grad_naziv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/hintGrad"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/fragment_dodaj_grad_drzava"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/hintDrzava"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragment_dodaj_grad_naziv" />

                <EditText
                    android:id="@+id/fragment_dodaj_grad_latituda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/hintLatituda"
                    android:inputType="phone"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragment_dodaj_grad_drzava" />

                <EditText
                    android:id="@+id/fragment_dodaj_grad_longituda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/hintLongituda"
                    android:inputType="phone"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragment_dodaj_grad_latituda" />

                <EditText
                    android:id="@+id/fragment_dodaj_grad_opis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/hintOpis"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragment_dodaj_grad_longituda" />

                <Button
                    android:id="@+id/dugmeDodajGrad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:fontFamily="@font/roboto"
                    android:background="@color/purple_500"
                    android:text="@string/dodajGrad"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragment_dodaj_grad_opis" />

            </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>