<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UvodnaActivity">

    <ScrollView
        android:id="@+id/activity_uvodna_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/activity_uvodna_slika"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/layout_margin"
                app:srcCompat="@drawable/salesman"
                android:contentDescription="@string/opis_uvodne_slike"/>

            <TextView
                android:id="@+id/activity_uvodna_tekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:fontFamily="@font/roboto"
                android:lineSpacingMultiplier="1.2"
                android:paddingStart="@dimen/layout_margin"
                android:paddingTop="@dimen/layout_margin"
                android:paddingEnd="@dimen/layout_margin"
                android:text="@string/kratakOpisAplikacije"
                android:textSize="@dimen/textSize" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin" />

            <TextView
                android:id="@+id/activity_uvodna_autori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:fontFamily="@font/roboto"
                android:lineSpacingMultiplier="1.2"
                android:paddingStart="@dimen/layout_margin"
                android:paddingTop="@dimen/layout_margin"
                android:paddingEnd="@dimen/layout_margin"
                android:paddingBottom="@dimen/layout_margin"
                android:text="@string/autori"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"/>

        </LinearLayout>

    </ScrollView>

</layout>

