<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/fragment_detalji_grada_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/layout_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/layout_margin">

            <TextView
                android:id="@+id/fragment_detalji_grada_nazivLabela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/city_padding"
                android:text="@string/gradLabela"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/fragment_detalji_grada_naziv"
                app:layout_constraintHorizontal_bias="0.153"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_detalji_grada_naziv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_bold"
                android:padding="@dimen/city_padding"
                android:text="@string/latitudaLabela"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/btnTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_detalji_grada_drzavaLabela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/city_padding"
                android:text="@string/drzavaLabela"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/fragment_detalji_grada_drzava"
                app:layout_constraintHorizontal_bias="0.179"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detalji_grada_nazivLabela" />

            <TextView
                android:id="@+id/fragment_detalji_grada_drzava"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_bold"
                android:padding="@dimen/city_padding"
                android:text="@string/latitudaLabela"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/btnTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detalji_grada_naziv" />

            <TextView
                android:id="@+id/fragment_detalji_grada_latitudaLabela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/city_padding"
                android:text="@string/latitudaLabela"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/fragment_detalji_grada_latituda"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detalji_grada_drzavaLabela" />

            <TextView
                android:id="@+id/fragment_detalji_grada_latituda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_bold"
                android:padding="@dimen/city_padding"
                android:text="@string/latitudaLabela"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/btnTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detalji_grada_drzava" />

            <TextView
                android:id="@+id/fragment_detalji_grada_longitudaLabela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/city_padding"
                android:text="@string/longitudaLabela"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/fragment_detalji_grada_longituda"
                app:layout_constraintHorizontal_bias="0.238"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detalji_grada_latitudaLabela" />

            <TextView
                android:id="@+id/fragment_detalji_grada_longituda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_bold"
                android:padding="@dimen/city_padding"
                android:text="@string/latitudaLabela"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/btnTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detalji_grada_latituda" />

            <TextView
                android:id="@+id/fragment_detalji_grada_opisLabela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/city_padding"
                android:text="@string/opisLabela"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detalji_grada_longitudaLabela" />

            <TextView
                android:id="@+id/fragment_detalji_grada_opis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="@dimen/city_padding"
                android:text="@string/latitudaLabela"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detalji_grada_opisLabela" />

            <Button
                android:id="@+id/dugmePrikaziNaMapi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/common_google_signin_btn_icon_light"
                android:fontFamily="@font/roboto"
                android:text="@string/prikaziNaMapi"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detalji_grada_opis" />

            <Button
                android:id="@+id/dugmeIdiNaAlgoritamFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="@dimen/layout_margin"
                android:background="#E91E63"
                android:fontFamily="@font/roboto"
                android:text="@string/idiNaAlgoritam"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dugmePrikaziNaMapi" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>